stylesheets/stylesheet.css
/* Colours
#2d3142 - jett black
#e85d7c - blush rose
#f5e6e8 - lavender blush
#2d314275 - jett black with ~50% opacity
#f5e6e87f - lavender blush with ~50% opacity
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    color: #f5e6e8;
    background-color: #2d3142;
    flex-direction: column;
    font-family: "Lucida Console", "Courier New", monospace;
}

p {
    color: #f5e6e87f;
    font-size: 16px;
    margin: 20px 0;
}


.navbar {
    background-color: #2D3142;
    position: sticky;
    top: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 2px solid #62656e75;
    z-index: 100;
}

.navbar .navbar-links{
    display: flex;
    flex-direction: row;
}

.navbar .logo {
    height: 60px;
    width: auto;
}

.btn {
    flex: 0 1 auto;
    background-color: #2D3142;
    padding: 5px 10px;
    border-radius: 18px;
    border: none;
    color: #F5E6E8;
    font-size: 16px;
    margin: 20px;
    cursor: pointer;
}

.btn#signin-btn {
    background-color: #E85D7C;
}

.btn:hover {
    background-color: #F5E6E8;;
    color: #2D3142;
    transform: translateY(-3px);
    transition: transform 0.3s ease;
}

.navbar-links .search-form {
    display: flex;
    flex-direction: row;
}

#search-input {
    flex: 0 1 auto;
    padding: 5px 10px;
    border-radius: 4px;
    border: none;
    height: 50px;
    margin: 10px;
}


.pink-colour {
    color: #E85D7C;
}

.hero-section {
    text-align: left;
    display: flex;
    flex-direction: column;
    height: 500px;
    width: auto;
    padding: 50px 20px;
    background-image: url('../assets/skyrim.jpg');
    background-size: cover;
}

.hero.intro {
    font-size: 64px;
    margin-top: 20px;
    margin: 0px;
    color: #F5E6E8
}

.hero.text {
    width: 400px;
    height: auto;
}

.hero.pink-colour {
    color: #E85D7C;
}

.carousel-wrapper {
    display: flex;
    flex-direction: row;
}

ul.game-cards{
    display: flex;
    list-style: none;
    flex-direction: row;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    width: 840px;
    scrollbar-width: none;
}

li.game-card {
    scroll-snap-align: center;
    flex-shrink: 0;
}

.categories {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 8px;
    margin-top: 8px;
}

.game-card {
    display: flex;
    background-color: #0b0c11;
    border-radius: 8px;
    padding: 10px;
    width: 280px;
    height: 450px;
    margin: 16px;
    overflow: hidden;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.game-card:hover {
    transform: translateY(-5px);
    transition: transform 0.3s ease; 
}

.game-card:hover, .game-image:hover {
    transform: scale(1.05);
}

.game-image {
    width: 100%;
    height: 250px;
    object-fit: cover;
    border-radius: 4px;
    transition: transform 0.3s ease;
}

.game-card a {
    text-decoration: none;
}

.game.title {
    color: #f5e6e8;
    margin-top: 4px;
}

.game-card .info .genre-tag {
    background-color: #e85d7b7a;
    color: #E85D7C;
    display: inline-block;
    padding: 2px 6px;
    border-radius: 4px;
    font-size: 12px;
    margin-top: 0px;
    margin-bottom: 10px;
}

.game-card .info .game.description {
    color: #f5e6e87f;
    font-size: 14px;
    margin-top: 0px;
    margin-bottom: 0px;
}

/* Scroll buttons */

.carousel-btn {
    background: transparent;
    border: none;
    margin: 10px;
    cursor: pointer;
}

/* sign in page */

.container{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 24px;
}

.container .sign-in, .container .sign-up {
    display: flex;
    flex-direction: column;
    background-color: #1d202c;
    height: 320px;
    width: 300px;
    margin: 20px;
    flex: 0 1 auto;
    align-items: center;
    justify-content: center;
    border: 2px solid #62656e75;
    border-radius: 12px;
}

.sign-in .small-logo, .sign-up .small-logo {
    height: 40px;
    width: auto;
}

.container .sign-in .text, .container .sign-up .text {
    text-align: center;
}

.sign-in .text, .sign-up .text {
    margin: 10px;
    padding-left: 20px;
    padding-right: 20px;
}

.sign-in .form, .sign-up .form {
    display: flex;
    flex-direction: column;
    margin: 0;
}

.form .label {
    margin-top: 12px;
    margin-bottom: 4px;
}

.sign-in .form .input, .sign-up .form .input {
    color: white;
    background-color: #0b0c11;
    border: 2px solid #62656e75;
}

a.no-account {
    text-decoration: none;
    font-size: 12px;
    margin-top: -16px;
    text-align: center;
}

a.no-account p {
    margin: 0;
}

a.no-account:hover {
    text-decoration: underline;
}

/* games library page */

.gamelibrary-wrapper {
    display: flex;
    flex-direction: column;
    border-bottom: 2px solid #62656e75;
}

.librarytitle-wrapper {
    margin: 24px;
}

.searchoptions-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin: 24px;
}

.dropdown-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
}

